--- a/flashcards/templates/index.html
+++ b/flashcards/templates/index.html
@@ -3,25 +3,100 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Flashcards</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f2f2f2;
+            color: #333;
+        }
+
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+
+        h2 {
+            margin-top: 20px;
+            font-size: 1.5rem;
+            color: #444;
+        }
+
+        .flashcard {
+            background-color: #fff;
+            padding: 10px;
+            margin-bottom: 10px;
+            border-radius: 5px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            position: relative;
+        }
+
+        .flashcard button {
+            background-color: #007bff;
+            color: #fff;
+            border: none;
+            padding: 5px 10px;
+            border-radius: 3px;
+            cursor: pointer;
+        }
+
+        .flashcard button:hover {
+            background-color: #0056b3;
+        }
+
+        .answer {
+            display: none;
+            margin-top: 10px;
+            color: #777;
+        }
+
+        .delete-button {
+            position: absolute;
+            top: 5px;
+            right: 5px;
+            background-color: #ff6347 !important; /* Adicionando !important para garantir a especificidade */
+            color: #fff !important; /* Adicionando !important para garantir a especificidade */
+            border: none;
+            padding: 5px 10px;
+            border-radius: 3px;
+            cursor: pointer;
+        }
+
+        .delete-button:hover {
+            background-color: #d21000; /* Cor de fundo vermelha mais escura no hover */
+        }
+    </style>
 </head>
 <body>
-    {% for c in levels %}
-    <h2>LEVEL {{ c }}</h2>
-    {% for flashcard in flashcards %}
-        {% if flashcard.level == c %}
-            {{ flashcard.question }} - {{flashcard.answer}}<br>
-            <button class="show-answer">Show answer</button>
-            {{ flashcard.date }}
-        {% endif %}
-    {% endfor %}
-    {% endfor %}
+    <center>
+        <h1>Welcome to Flashcards App</h1>
+        <p>Lets study?</p>
+    </center>
+    <div class="container">
+        {% for c in levels %}
+        <h2>Level {{ c }}</h2>
+        {% for flashcard in flashcards %}
+            {% if flashcard.level == c %}
+                <div class="flashcard">
+                    <p>{{ flashcard.question }}</p>
+                    <button class="show-answer">Show answer</button>
+                    <p class="answer">{{ flashcard.answer }}</p>
+                    <small><p class="date">{{ flashcard.date }}</p></small>
+                    <a href="#"><button class="delete-button">Delete</button></a>
+                </div>
+            {% endif %}
+        {% endfor %}
+        {% endfor %}
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script>
         $(document).ready(function() {
             $('.show-answer').click(function() {
-                $(this).next('.answer').show();
+                $(this).siblings('.answer').toggle();
             });
         });
     </script>
